# ComfyUI-Qwen-Omni

./: QwenOmni.py  README.md  README_CN.md  VideoUploader.py  __init__.py  pyproject.toml  requirements.txt
QwenOmniWorkflows/: QwenOmniWorkflows.json
